@@ -69,7 +69,7 @@ name|cayenne
 operator|.
 name|di
 operator|.
-name|ListBuilder
+name|Module
 import|;
 end_import
 
@@ -81,9 +81,9 @@ name|apache
 operator|.
 name|cayenne
 operator|.
-name|di
+name|tx
 operator|.
-name|Module
+name|TransactionDescriptor
 import|;
 end_import
 
@@ -145,29 +145,7 @@ name|java
 operator|.
 name|util
 operator|.
-name|ArrayList
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
 name|Collection
-import|;
-end_import
-
-begin_import
-import|import static
-name|java
-operator|.
-name|util
-operator|.
-name|Arrays
-operator|.
-name|asList
 import|;
 end_import
 
@@ -306,6 +284,93 @@ argument_list|(
 name|op
 argument_list|,
 name|callback
+argument_list|)
+return|;
+block|}
+comment|/**      * Runs provided operation wrapped in a single transaction. Transaction      * handling delegated to the internal {@link TransactionManager}. Nested      * calls to 'performInTransaction' are safe and attached to the same      * in-progress transaction. TransactionalOperation can be some arbitrary      * user code, which most often than not will consist of multiple Cayenne      * operations.      *      * @param op         an operation to perform within the transaction.      * @param descriptor describes additional transaction parameters      * @param<T> result type      * @return a value returned by the "op" operation.      *      * @since 4.2      */
+specifier|public
+parameter_list|<
+name|T
+parameter_list|>
+name|T
+name|performInTransaction
+parameter_list|(
+name|TransactionalOperation
+argument_list|<
+name|T
+argument_list|>
+name|op
+parameter_list|,
+name|TransactionDescriptor
+name|descriptor
+parameter_list|)
+block|{
+name|TransactionManager
+name|tm
+init|=
+name|injector
+operator|.
+name|getInstance
+argument_list|(
+name|TransactionManager
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+return|return
+name|tm
+operator|.
+name|performInTransaction
+argument_list|(
+name|op
+argument_list|,
+name|descriptor
+argument_list|)
+return|;
+block|}
+comment|/**      * Runs provided operation wrapped in a single transaction. Transaction      * handling delegated to the internal {@link TransactionManager}. Nested      * calls to 'performInTransaction' are safe and attached to the same      * in-progress transaction. TransactionalOperation can be some arbitrary      * user code, which most often than not will consist of multiple Cayenne      * operations.      *      * @param op         an operation to perform within the transaction.      * @param callback   a callback to notify as transaction progresses through stages.      * @param descriptor describes additional transaction parameters      * @param<T> returned value type      * @return a value returned by the "op" operation.      *      * @since 4.2      */
+specifier|public
+parameter_list|<
+name|T
+parameter_list|>
+name|T
+name|performInTransaction
+parameter_list|(
+name|TransactionalOperation
+argument_list|<
+name|T
+argument_list|>
+name|op
+parameter_list|,
+name|TransactionListener
+name|callback
+parameter_list|,
+name|TransactionDescriptor
+name|descriptor
+parameter_list|)
+block|{
+name|TransactionManager
+name|tm
+init|=
+name|injector
+operator|.
+name|getInstance
+argument_list|(
+name|TransactionManager
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+return|return
+name|tm
+operator|.
+name|performInTransaction
+argument_list|(
+name|op
+argument_list|,
+name|callback
+argument_list|,
+name|descriptor
 argument_list|)
 return|;
 block|}
